@@ -1,6 +1,7 @@
 45
 ================
 
+27/12/21 Person should not be mandatory to create an incident from online form
 26/12/21 Do not include emblems when sorting by animal name in find results
 26/12/21 HasActiveReserve should observe ReservationCancelledDate
 23/12/21 Additional colour options for medium theme
